# vscode_extension

./: .gitignore  README.md  databricks.yml  environment.yaml  pyproject.toml  requirements.txt
main/: custom_funcs.py  train.py
vscode_extension/: __init__.py  train.py  transformations.py
