[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vscode_extension"
dynamic = ["version", "dependencies"]
description = "An example model training workflow using Databricks extension for Visual Studio Code."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
train-cli = "vscode_extension:train"

[tool.setuptools.dynamic]
version = {file = "vscode_extension/VERSION"}
dependencies = {file = "requirements.txt"}

# https://pypi.org/project/pip-tools/
# https://hynek.me/til/pip-tools-and-pyproject-toml/
[project.optional-dependencies]
test = ["pytest>=7.0", "coverage[toml]", "pytest-cov", "black", "mypy", "Flake8-pyproject"]

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
ignore = ['E501']
per-file-ignores = [
    '__init__.py:F401',
]
